--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "console.table": "^0.10.0",
     "inquirer": "^8.1.5",
     "inquirer-menu": "^1.0.0",
-    "mysql2": "^2.3.0"
+    "mysql2": "^2.3.0",
+    "node-fetch": "^3.0.0"
   }
 }
